[package]
name = "circuits3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.58"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.31"
glam = "0.21.2"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Window",
    "console",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "CssStyleDeclaration",
    "HtmlImageElement",
    "WheelEvent",
    "KeyboardEvent",
    "ImageData",
    "Navigator",
    "Clipboard",
    "UrlSearchParams",
    "Location",
]
